fixed contrast for real and added attribution

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
+  color: rgba(245, 245, 245, 0.671);
+  margin: 0;
 }
 
 h1 {
@@ -36,7 +37,7 @@ h1 {
 
 .changed {
   font-size: 1.15rem;
+  font-weight: bolder;
   font-family: monospace;
-  text-shadow: 1px 0 0;
-  color: blueviolet;
+  color: red;
 }
